--- a/bajpaicumputer/src/Screens/Client/Header/Navbar.module.css
+++ b/bajpaicumputer/src/Screens/Client/Header/Navbar.module.css
@@ -142,7 +142,7 @@
   
     .active {
       margin-bottom: 8px;
-      color:white;
+      color:#6ec1e4;
       text-align: center;
       padding: 10px;
       width: 100%;
