--- a/bajpaicumputer/src/Screens/Client/Apply/ApplyForm.css
+++ b/bajpaicumputer/src/Screens/Client/Apply/ApplyForm.css
@@ -1,9 +1,24 @@
+:root{
+    --white: hsla(0, 0%, 100%, 1);
+    --white_a8: hsla(0, 0%, 100%, 0.08);
+    --white_a12: hsla(0, 0%, 100%, 0.12);
+    --cultured: hsla(220, 20%, 97%, 1);
+    --snow: hsla(345, 57%, 97%, 1);
+    --manatee: hsla(219, 10%, 62%, 1);
+    --black-coral: hsla(220, 12%, 43%, 1);
+    --cadet-blue-crayola_a20: hsla(222, 23%, 71%, 0.2);
+    --cinnamon-satin: hsla(344, 53%, 62%, 1);
+    --raisin-black: hsla(216, 14%, 14%, 1);
+    --raisin-black_a6: hsla(216, 14%, 14%, 0.06);
+    --gunmetal: hsla(214, 15%, 21%, 1);
+    --charcoal: hsla(219, 22%, 26%, 1);
+}
 .main_apply_div{
-    border: 1px solid rgb(28, 130, 173);
+   background-color: hsla(345, 57%, 97%, 1);
     width:35%;
-    height: 39rem;
+    /* height: 39rem; */
     border-radius: 10px;
-    padding: 0.5rem;
+    padding: 1rem;
  }
  .main_apply_div h2{
     margin-bottom: 0.3rem;
@@ -14,13 +29,26 @@
     align-items: center;
  }
 .multi_input{
-    border: 1px solid rgb(28, 130, 173);
-    padding: 0.2rem;
+    background-color: var(--white);
+    color: var(--black-coral);
+    font-size: var(--fs-7);
+    padding: 14px 18px;
+    outline: none;
+    margin-block-end: 20px;
+    border-radius: 5px;
+    border: none;
     width: 48%;
-    border-radius: 6px;
-    height: 1.8rem;
-    margin-top: 0.5rem;
-    padding-left: 0.5rem;
+}
+.multi_input_full{
+    background-color: var(--white);
+    color: var(--black-coral);
+    font-size: var(--fs-7);
+    padding: 14px 18px;
+    outline: none;
+    margin-block-end: 20px;
+    border-radius: 5px;
+    border: none;
+    width: 100%;
 }
 .multi_input:focus{
     outline: none;
@@ -33,4 +61,24 @@
 .main_com{
     display: flex;
     
+}
+
+.query_btn{
+    background: rgb(28, 130, 173);
+    color: white;
+    border: none;
+    width: 100%;
+    height: 2rem;
+    border-radius: 3px
+}
+
+
+@media screen and (max-width: 780px) {
+   
+    .main_apply_div{
+        width: 100%;
+        margin: 0.5rem;
+        margin-top: 4rem;
+       
+      }
 }
