--- a/bajpaicumputer/src/Screens/Client/OurWork/OurWork.css
+++ b/bajpaicumputer/src/Screens/Client/OurWork/OurWork.css
@@ -1,5 +1,5 @@
-.card_main{
-    width: 20%;
+.card_main1{
+    width: 30%;
     /* height: 20rem; */
     border: 1px solid rgb(28, 130, 173);
     border-radius: 5px;
@@ -8,44 +8,33 @@
 }
 
 
-.card_main img{
+.card_main1 img{
     width: 100%;
     height: 12rem;
     border-radius: 5px;
 }
-.course_details{
+.course_details1{
     display: flex;
     align-items: center;
     flex-direction: column;
 }
-.course_details p{
+.course_details1 p{
     margin: 0.2rem;
 }
-.course_details button{
+.course_details1 button{
     background: rgb(28, 130, 173);
     color: white;
     border: none;
     width: 6rem;
     height: 1.6rem;
-    border-radius: 3px
+    border-radius: 3px;
+    margin-top: 0.5rem;
+    
 }
 @media screen and (max-width: 780px) {
-    .card_main{
-        width: 49%;
-
-    }
-
-    .flex_div_courses {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-        padding: 0.3rem;
-    }
-    .card_main img {
+    .card_main1{
         width: 100%;
-        height: 5rem;
-        border-radius: 5px;
+
     }
    
 }
