--- a/bajpaicumputer/src/components/LoadingSpinner1.css
+++ b/bajpaicumputer/src/components/LoadingSpinner1.css
@@ -10,7 +10,7 @@
     width: 50px;
     height: 50px;
     border: 10px solid #f1dac6; 
-    border-top: 10px solid  #FE7600; 
+    border-top: 10px solid  rgb(28, 130, 173); 
     border-radius: 50%;
     animation: spinner 1.5s linear infinite;
   }
