--- a/bajpaicumputer/src/Screens/Admin/Registration/Registration.css
+++ b/bajpaicumputer/src/Screens/Admin/Registration/Registration.css
@@ -46,6 +46,17 @@
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
 }
+.Export_data_div10 select{
+    border: 1px solid rgb(28, 130, 173);
+    margin-right: 8%;
+    width: 100%;
+    padding: 0.5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-radius: 5px;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
 .Export_data_divimg_icon{
     display: flex;
 }
