--- a/bajpaicumputer/src/Screens/Client/Apply/ApplyForm.css
+++ b/bajpaicumputer/src/Screens/Client/Apply/ApplyForm.css
@@ -69,7 +69,8 @@
     border: none;
     width: 100%;
     height: 2rem;
-    border-radius: 3px
+    border-radius: 3px;
+    text-align: center;
 }
 
 
