--- a/bajpaicumputer/src/Screens/Client/Home/CourceCard.css
+++ b/bajpaicumputer/src/Screens/Client/Home/CourceCard.css
@@ -5,6 +5,7 @@
     border-radius: 5px;
     padding: 0.5rem;
     margin-bottom: 1rem;
+    margin: 1rem;
 }
 
 
@@ -31,7 +32,7 @@
 }
 @media screen and (max-width: 780px) {
     .card_main{
-        width: 49%;
+        width: 100%;
 
     }
 
