--- a/bajpaicumputer/src/App.css
+++ b/bajpaicumputer/src/App.css
@@ -64,6 +64,10 @@
   z-index: 100;
 }
 
+.whatsapp_float:hover{
+  background-color: rgb(28, 130, 173);
+  transition: 0.5s;
+}
 .whatsapp-icon {
   margin-top: 16px;
 }
@@ -87,6 +91,7 @@
 
 
 .whatsapp_float1 {
+  cursor: pointer;
   position: fixed;
   width: 9rem;
   height: 3rem;
@@ -100,10 +105,15 @@
   z-index: 100;
   font-size: 16px;
   text-decoration:none;
- 
+ font-weight: bold;
 }
 
-
+.whatsapp_float1:hover{
+  background-color: rgb(28, 130, 173);
+  transition: 0.5s;
+  color: black;
+  font-weight: bold;
+}
 
 
 
@@ -114,6 +124,7 @@
   }
 
   .whatsapp_float1 {
+    cursor: pointer;
     width: 7rem;
     height: 2.5rem;
     bottom: 4.5rem;
