--- a/bajpaicumputer/src/Screens/Client/About/About.css
+++ b/bajpaicumputer/src/Screens/Client/About/About.css
@@ -1,36 +1,74 @@
-.about_text{
-    color: #6ec1e4;
-    margin-top: 1rem;
-}
-.about_text_div{
-    border-bottom: 1px solid gray;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   padding-bottom: 1rem;
+.about_text {
+  color: #6ec1e4;
+  margin-top: 1rem;
 }
 
-.content_div{
-    width: 100%;
+.about_text_div {
+  border-bottom: 1px solid gray;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 1rem;
+}
+
+.content_div {
+  width: 100%;
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
-.content_div p{
-    font-size:16px;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+.content_div p {
+  font-size: 16px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.content_div h2 {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: 1rem 0rem;
+    color: rgb(28, 130, 173);
+}
+
+.about_card_main {
+  cursor: pointer;
+  /* height: 20rem; */
+  border: 1px solid rgb(28, 130, 173);
+  border-radius: 5px;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  margin: 1rem;
+  transition: transform .5s;
+  background-color: #e6e2ed;
+
+}
+
+.about_card_main:hover {
+  color: #FFFFFF;
+  background-color: rgb(28, 130, 173);
+  transition: 0.5s;
+  -ms-transform: scale(1.05); /* IE 9 */
+  -webkit-transform: scale(1.05); /* Safari 3-8 */
+  transform: scale(1.05);
+}
+
+
+.about_card_main .about_course_details p span {
+  font-weight: bold;
 }
 
 @media screen and (max-width: 780px) {
-   
-.content_div{
+
+  .content_div {
     width: 100%;
     padding: 10px;
-   }
-   .about_text_div{
-  width: 100%;
-  padding: 10px;
-}
   }
+
+  .about_text_div {
+    width: 100%;
+    padding: 10px;
+  }
+}
+
