--- a/bajpaicumputer/src/Screens/Client/Apply/ApplyForm.css
+++ b/bajpaicumputer/src/Screens/Client/Apply/ApplyForm.css
@@ -1,5 +1,5 @@
 :root{
-    --white: hsla(0, 0%, 100%, 1);
+    --white: rgb(255, 255, 255);
     --white_a8: hsla(0, 0%, 100%, 0.08);
     --white_a12: hsla(0, 0%, 100%, 0.12);
     --cultured: hsla(220, 20%, 97%, 1);
@@ -14,14 +14,17 @@
     --charcoal: hsla(219, 22%, 26%, 1);
 }
 .main_apply_div{
-   background-color: hsla(345, 57%, 97%, 1);
-    width:35%;
+   background-color: rgb(121, 144, 187);
+    width:50%;
     /* height: 39rem; */
     border-radius: 10px;
     padding: 1rem;
  }
  .main_apply_div h2{
-    margin-bottom: 0.3rem;
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
  }
  .multi_input_main{
     display: flex;
@@ -38,6 +41,7 @@
     border-radius: 5px;
     border: none;
     width: 48%;
+    /* color: #000; */
 }
 .multi_input_full{
     background-color: var(--white);
@@ -71,6 +75,7 @@
     height: 2rem;
     border-radius: 3px;
     text-align: center;
+    cursor: pointer;
 }
 
 
