--- a/bajpaicumputer/src/Screens/Client/Footer/Footer.css
+++ b/bajpaicumputer/src/Screens/Client/Footer/Footer.css
@@ -46,10 +46,17 @@
     display: flex;
     flex-direction: column;
     color: white ;
+    text-decoration: none;
+    line-height: 2rem;
 }
 
 .mardivcontentlink a:hover{
-    color: #6ec1e4;
+    color: #000;
+    transition: 0.5s;
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1);
+    font-weight: bold;
 }
 .iconmain{
     width: 60px;
@@ -75,7 +82,7 @@
     box-shadow: 1px 1px 1px 0px #f3e6e6 !important;
     padding: 20px !important;
     margin-bottom: 10px !important;
-    background-color: rgb(28, 130, 173) !important;
+    background-color: rgb(28, 130, 173) ;
     color: white !important;
     border-radius: 23px !important;
     height: 50px !important;
@@ -91,7 +98,9 @@
     margin-top: 8px;
     transition: width 0.2s;
     transition: height 0.2s;
+    background-color: #000;
 }
+
 .instatxt{
     font-weight: 400;
 }
