--- a/bajpaicumputer/src/Screens/Client/Header/Navbar.module.css
+++ b/bajpaicumputer/src/Screens/Client/Header/Navbar.module.css
@@ -39,10 +39,10 @@
   .active {
     text-decoration: none;
     font-size: 20px;
-    padding: 10px 20px;
-    margin: 0 10px;
+    /* padding: 10px 20px; */
+    /* margin: 0 10px; */
     cursor: pointer;
-    color: white;
+    color: #000;
     border-radius: 5px;
   
   }
@@ -54,11 +54,15 @@
     text-decoration: none;
     border-radius: 5px;
     font-size: 20px;
-    padding: 10px 20px;
-    margin: 0 10px;
+    /* padding: 10px 20px; */
+    /* margin: 0 10px; */
     cursor: pointer;
-    color:#6ec1e4;
-   
+    color:#000;
+    transition: 0.5s;
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1);
+    font-weight: bold;
   }
   .home,
   .about,
@@ -142,14 +146,18 @@
   
     .active {
       margin-bottom: 8px;
-      color:#6ec1e4;
+      color:#000;
       text-align: center;
       padding: 10px;
       width: 100%;
       transition: all 0.5s ease-out;
       display: grid;
       border-radius: 5px;
-      
+      /* transition: 0.5s; */
+      -ms-transform: scale(1.1); /* IE 9 */
+      -webkit-transform: scale(1.1); /* Safari 3-8 */
+      transform: scale(1.1);
+      font-weight: bold;
     }
   
     .mobileMenuIcon {
@@ -198,6 +206,9 @@
 .mobileMenuIcon {
      
  display: block;
+}
+.active{
+  color: rgb(28, 130, 173);
 }
 }
   
