--- a/bajpaicumputer/src/Screens/Client/Home/AvaialableCources.css
+++ b/bajpaicumputer/src/Screens/Client/Home/AvaialableCources.css
@@ -2,7 +2,7 @@
     padding: 0rem;
 }
 .main_courses_div h1{
-    margin-bottom: 0.5rem;
+    margin: 1rem 0rem;
     color: rgb(28, 130, 173);
     text-align: center;
     font-size: 22px;
@@ -20,3 +20,7 @@
     align-items: center;
     flex-wrap: wrap;
 }
+
+/* .main_courses_div:hover{
+    color: gray;
+} */
