--- a/bajpaicumputer/src/Screens/Client/Home/CourceCard.css
+++ b/bajpaicumputer/src/Screens/Client/Home/CourceCard.css
@@ -1,4 +1,5 @@
 .card_main{
+    cursor: pointer;
     width: 20%;
     /* height: 20rem; */
     border: 1px solid rgb(28, 130, 173);
@@ -6,8 +7,18 @@
     padding: 0.5rem;
     margin-bottom: 1rem;
     margin: 1rem;
+    transition: transform .5s;
+    background-color: #e6e2ed;
 }
 
+.card_main:hover{
+    color: #FFFFFF;
+    background-color: rgb(28, 130, 173);
+    transition: 0.5s;
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1);
+}
 
 .card_main img{
     width: 100%;
@@ -48,5 +59,12 @@
         height: 5rem;
         border-radius: 5px;
     }
-   
+    .card_main:hover{
+        color: #FFFFFF;
+        background-color: rgb(28, 130, 173);
+        transition: 0.5s;
+        -ms-transform: scale(1.1); /* IE 9 */
+        -webkit-transform: scale(1.1); /* Safari 3-8 */
+        transform: scale(1.1);
+    }
 }
