--- a/bajpaicumputer/src/Screens/Client/OurWork/OurWork.css
+++ b/bajpaicumputer/src/Screens/Client/OurWork/OurWork.css
@@ -2,11 +2,17 @@
     width: 30%;
     /* height: 20rem; */
     border: 1px solid rgb(28, 130, 173);
-    border-radius: 5px;
+    border-radius: 5px; 
     padding: 0.5rem;
     margin-bottom: 1rem;
 }
 
+.card_main1:hover{
+    transition: 0.5s;
+    padding: 0.5rem;
+    color: #FFFFFF;
+    background-color: rgb(28, 130, 173);
+}
 
 .card_main1 img{
     width: 100%;
@@ -44,6 +50,13 @@
     text-align: center;
     
 }
+
+.card_main1:hover .course_details1 a{
+    background-color: #FFFFFF;
+    color: #000;
+    transition: 0.5s;
+}
+
 @media screen and (max-width: 780px) {
     .card_main1{
         width: 100%;
